--- a/external_bi/external_Dashboard_01.html
+++ b/external_bi/external_Dashboard_01.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Noto Sans Thai' rel='stylesheet'>
     <title>EAGLES Knowledge zone</title>
-    <link rel="icon" type="image/x-icon" href="Photo/Eicon.png">
+    <link rel="icon" type="image/x-icon" href="../Photo/Eicon.png">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="overlay.js"></script>
+    <script src="../overlay.js"></script>
     <style>
         .FontThai {
                 font-family: 'Noto Sans Thai';
@@ -22,22 +22,19 @@
     <div class="flex h-screen bg-gray-100">
         <aside class="flex-none static h-full w-64 bg-gradient-to-b from-blue-500 to-orange-500 text-white shadow-2xl">
             <div class="px-16 flex items-center justify-center h-16">
-                <img src="Photo/E-LOGO.png" alt="E-LOGO">
-                <a href="manu_e.html" class="absolute bottom-5 left-18 bg-rose-700 hover:bg-gradient-to-r from-rose-700 to-pink-900 text-white text-center FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-2 px-4 mr-2">กลับหน้าแรก</a>
+                <img src="../Photo/E-LOGO.png" alt="E-LOGO">
+                <a href="../external_Dashboard_BI.html" class="absolute bottom-5 left-18 bg-rose-700 hover:bg-gradient-to-r from-rose-700 to-pink-900 text-white text-center FontThai text-sm transition ease-in-out hover:scale-110 duration-150 rounded-none py-2 px-4 mr-2">กลับหน้าแรก</a>
             </div>
             
             <!-- Side Bar Frame -->
             <div class="pt-4">
-                <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">เลือก E-Learning</div>
-                <nav class="mt-4 px-4 grid grid-rows-4 grid-flow-col gap-4">
-                    <a href="https://eaglesthai.sharepoint.com/:b:/s/IT-Document/Edcj32_D4mpHowbaZwrjK8kB6nLzjTSi25221_Mct5-N6w?e=abjUf2" target="_blank" class="rounded-none border-b-2 px-3 py-2 text-sm font-semibold text-white text-balance tracking-normal shadow-xs hover:bg-indigo-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-700 transition hover:scale-105 FontThai">เอกสารประกอบการอบรม</a>
-                </nav>
+                <div class="px-6 py-2 text-gray-300 font-bold FontThai tracking-tighter text-center">เลือกช่วงเวลาการอบรม</div>
             </div>
         </aside>
 
         <main class="flex-grow flex flex-col">
             <header class="bg-blue-400 h-16 flex items-center justify-center text-white font-bold text-xl shadow-xl">
-                <h3 class="ml-6 mr-auto FontThai ">IT Security Awareness & IT Policies E-Learning</h3>
+                <h3 class="ml-6 mr-auto FontThai ">Dashboard Design with Power BI</h3>
             </header>
 
             <!-- Frame เนื้อหา -->
@@ -45,80 +42,59 @@
 
         <div class="text-center">
             <!-- ClassName -->
-            <p class="text-xl FontThai"> วัตถุประสงค์ </p>
-            <p class="text-sm FontThai"> เพื่อเสริมสร้างความเข้าใจและความตระหนักรู้เกี่ยวกับนโยบายของแผนก IT และส่งเสริมให้พนักงานทุกคนสามารถปฏิบัติตามนโยบายดังกล่าวได้อย่างถูกต้องและมีประสิทธิภาพ</p><br>
+            <p class="text-xl FontThai py-2"> 1.Dashboard Design Principles </p>
         </div>
 
             <!-- Card frame -->
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
-                <img src="Photo/Photo_1.jpg" alt="register" class="w-full h-56 object-cover">
+                <img src="../Photo/power_bi_wall.jpg" alt="register" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
-                        <span class="mr-2">ขั้นตอนที่ 1</span>
-                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">ทะเบียนเรียน</span>
+                        <span class="mr-2">ช่วงที่ 1</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">57:35 นาที</span>
                     </div>
-                    <h3 class="text-2xl font-semibold text-white mb-3">ลงทะเบียนเพื่อเข้าร่วม</h3>
-                    <p class="text-gray-400 mb-6 line-clamp-3">
-                        พนักงาน Eagles ต้องลงทะเบียนก่อนการเข้าฝึกอบรม 
-                        ถ้าหากไม่ได้ "ลงทะเบียน" แต่มีการทำบททดสอบ "ผลสอบ" ถือเป็น "โมฆะ"
-                    </p>
-
+                    <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 1</h3><br><br><br>
                     <div class="flex items-center">
-                        <!-- Button Overlay Frame Regis -->
-                        <button id="open-drawer-btn-regis" class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
-                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">ลงทะเบียน
-                        </button>
-                        <div>
-                            <p class="text-gray-400 text-sm">คลิกเพื่อลงทะเบียน</p>
-                        </div>
+                        <span><a href="external_Dashboard_01vid1.html"
+                            class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                        <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
                     </div>
 
                 </div>
             </div>
         <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
-            <img src="Photo/Photo_2.png" alt="Home office with laptop" class="w-full h-56 object-cover">
+            <img src="../Photo/power_bi_wall.jpg" alt="Home office with laptop" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
-                        <span class="mr-2">ขั้นตอนที่ 2</span>
-                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">E-Learning</span>
+                        <span class="mr-2">ช่วงที่ 2</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">59:09 นาที</span>
                     </div>
-                    <h3 class="text-2xl font-semibold text-white mb-3">เปิด E-Learning</h3>
-                    <p class="text-gray-400 mb-6 line-clamp-3">
-                        รับชมวิดีโอการอบรม <br><br><br>
-                    </p>
+                    <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 2</h3><br><br><br>
                     <div class="flex items-center">
-                        <span><a href="IT_policie_vid.html"
+                        <span><a href="external_Dashboard_01vid2.html"
                             class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
-                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">E-Learning</a></span>
-                        <span><p class="text-gray-400 text-sm">คลิกเพื่อเปิด E-Learning</p></span>
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                        <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
                     </div>
                 </div>
         </div>
 
             <div class="bg-gray-800 rounded-none overflow-hidden shadow-lg FontThai transition duration-300 ease-in-out transform hover:scale-105">
-                <img src="Photo/Photo_3.jpg" alt="Modern minimalist desk" class="w-full h-56 object-cover">
+                <img src="../Photo/power_bi_wall.jpg" alt="Modern minimalist desk" class="w-full h-56 object-cover">
                 <div class="p-6">
                     <div class="flex items-center text-sm font-semibold mb-4 text-gray-400">
-                        <span class="mr-2">ขั้นตอนที่ 3</span>
-                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">ทำแบบทดสอบ</span>
+                        <span class="mr-2">ช่วงที่ 3</span>
+                        <span class="bg-gray-700 text-teal-400 px-3 py-1 rounded-full">1:08:10 นาที</span>
                     </div>
-                    <h3 class="text-2xl font-semibold text-white mb-3">3.ทำแบบทดสอบ</h3>
-                    <p class="text-gray-400 mb-6 line-clamp-3">
-                        ทำแบบทดสอบเพื่อวัดผลในการสอบ ผู้เข้าอบรมต้องได้คะแนน 30 คะแนน จาก 40 คะแนน ถึงจะผ่านการทดสอบ
-                    </p>
+                    <h3 class="text-2xl font-semibold text-white mb-3">Dashboard Design Principles ช่วงที่ 3</h3><br><br><br>
                     <div class="flex items-center">
-
-                        <!-- Button Overlay Frame -->
-                        <button id="open-drawer-btn-test" class="bg-emerald-500 text-white px-2 rounded-none px-4 py-2
-                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-3">ทำแบบทดสอบ
-                        </button>
-
-                        <div>
-                            <p class="text-gray-400 text-sm">คลิกเพื่อทำแบบทดสอบ</p>
-                        </div>                        
+                        <span><a href="external_Dashboard_01vid3.html"
+                            class="bg-emerald-500 text-white text-center px-4 rounded-none py-2 tracking-tighter 
+                            shadow-md hover:bg-emerald-600 transition duration-300 ease-in-out transform hover:scale-105 mr-6">รับชมวิดีโอ</a></span>
+                        <p class="text-gray-400 text-sm">คลิกเพื่อเปิดวิดีโอ</p>
                     </div>
-
                 </div>
             </div>
         </div>
