--- a/manu_external.html
+++ b/manu_external.html
@@ -33,6 +33,7 @@
                     <!-- Manu Class -->
                     <a href="external_Foxit_page.html" class="rounded-none px-4 py-2 border-b-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">การอบรมการใช้ Foxit PDF Editor</a>
                     <a href="external_ibi_page.html" class="rounded-none px-4 py-2 border-b-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">การอบรมการใช้งาน IBI</a>
+                    <a href="external_Dashboard_BI.html" class="rounded-none px-4 py-2 border-b-2 text-sm text-white text-balance tracking-normal shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500 transition hover:scale-105 FontThai">Dashboard Design with Power BI</a>
                 </nav>
             </div>
         </aside>
